static/css/style.css
/* Main styles and colors */


body {
    background-color: rgb(230, 230, 230);
    color: rgb(90, 90, 90);
    font-family: 'Josefin Sans', sans-serif;
}

.border-line {
    margin-top: 10px;
    width: 2px;
}

/* CALENDAR SETTINGS */

.datepicker-date-display {
    background-color:rgb(46, 125, 50);
    color:rgb(230, 230, 230);
}

.datepicker-date-display .year-text {
    color:rgb(230, 230, 230);
    font-size: 2.8rem;
    font-weight: bold;
    margin-bottom: 15px;
}

.btn-flat.datepicker-clear {
    color:rgb(66, 66, 66);
    font-size: 1.2rem;
    background-color:rgb(230, 230, 230);
}

.btn-flat.datepicker-cancel {
    color:rgb(66, 66, 66);
    font-size: 1.2rem;
    background-color:rgb(229, 57, 53);
}

.btn-flat.datepicker-done {
    color:rgb(66, 66, 66);
    font-size: 1.2rem;
    background-color:rgb(67, 160, 71);
}

/* OVERWRITE MATERIALIZE AND MDB INCOMPACTIBILITIES */

nav .sidenav-trigger {
    float: right;
}

a:hover {
    color:rgb(230, 230, 230);
}

.nav-link:hover {
    color:rgb(230, 230, 230);
}

.col.s10.push-s1.xl10.push-xl3 {
    min-width: 720px;
}

/* custom form settings */

.search-form {
    display: inline;
}

.col.s2.btn.search {
    line-height: 0;
    text-transform: capitalize;
    font-size: 16px;
}

.col.s2.btn.search:hover {
    line-height: 0;
    text-transform: capitalize;
    font-size: 19px;
    background-color: rgb(46, 125, 50);
    color:rgb(230, 230, 230);
}

/* Navbar styles */

header {
    width: 100%;
}

#main-navbar {
    background-color:rgba(46, 125, 50, 1);
    height: 74px;
    overflow: hidden;
}

.menu-upper {
    height: 100px;
}

.brand-logo {
    margin-left: 5%;
    margin-top: 10px;
}


.navbar {
    padding: 0;
    margin: auto 0;
    height: 150px;
    width: 100%;
}

.navbar-brand {
    margin: auto 0;
    padding: 0.5rem;
    border-radius: 50px;
}


.nav-link {
    margin-bottom: auto;
    font-size: 1.7em;
    font-weight: bold;
    color: rgb(230, 230, 230);
    background-color: transparent;
    width: 175px;
    text-align: center;
    padding: 5px 2px 5px 2px;
    transform: skewX(17deg);
    margin-right: 5px;
    margin-left: 5px;
}

.nav-link-li {
    transform: skewX(-17deg);
}

.nav-link-li:hover {
    background-color:rgb(66, 66, 66)
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 2;
}

.content-sticky {
    padding-top: 75px;
  }

.brand-logo.mobile {
    display: none;
}

.footer {
    margin-top: 30px;
    padding-top: 30px;
}

.footer-wrapper {
    max-width: 1320px;
    margin-left: auto;
    margin-right: auto;
}

/* Navbar styles for mobile */

#burger-icon {
    float: right;
    margin-right: 10px;
}


#mobile-demo {
    height: 300px;
    margin-top: 140px;
}

.nav-link-mobile {
    font-weight: bold;
}


/* Home page styles */

main.container {
    width: 90%;
    max-width: 1450px;
}

.title-wrapper {
    margin: 40px 0px 20px 50px;
    height: 50px;
    width: 100%;
    background: linear-gradient(to right, rgb(90, 90, 90) 10%, rgb(230, 230, 230) 70%);
    transform: skewX(
-17deg);
}

.title {
    font-size: 2em;
    font-weight: bold;
    text-align: center;
    float: left;
    margin-left: 15px;
    margin-top: 10px;
    background-color: inherit;
    color: rgb(230, 230, 230);
    transform: skewX(17deg);
}

.title-wrapper:hover {
    background: linear-gradient(to right, rgb(46, 125, 50) 10%, rgb(230, 230, 230) 70%);
}

.col.s12.m6.l4 {
    height: 192px;
    margin: 2px;
}
.description > li{
    font-size: 1.5em;
    font-weight: bold;
    text-align: center;
}

div.back {
    cursor: pointer;
}

.error-handler {
    margin-top: 25%;
}

.map-link {
    color: rgb(66, 66, 66);
    font-size: 1.4em;
}

.map-link:hover {
    color: rgb(66, 66, 66);
    font-weight: bold;
}

.phone-link {
    color: rgb(66, 66, 66);
    font-size: 1.0em;
}

.phone-link:hover {
    color: rgb(66, 66, 66);
    font-weight: bold;
}

.footer {
    background-color: rgb(46, 125, 50);
}

div.col-md-4.col-12 {
    font-size: 1.4em;
    font-weight: bold;
    padding-left: 15%;
    color: rgb(66, 66, 66);
}

div.col-md-4.col-12 > h4, div.col-md-4.col-12 > h5 {
    font-size: 1.3em;
    font-weight: bold;
    color: rgb(66, 66, 66);
}

.list-inline-item {
    color: rgb(66, 66, 66);
}

/* map settings  *//* map settings  */

.map-frame {
    margin: auto;
    width: 85%;
}
  
#map {
    min-height: 450px;
}

/* Administration pages specific styles */

table {
    margin-top: 10px;
    margin-bottom: 10px;
}

table.access-rights > tbody > tr > td, table.access-rights > tbody > tr > th {
    text-align: center;
}

.hidden {
    display: none;
}

table.access-rights, table.user-rights, table.car-details {
    max-width: 600px;
}

table.delete {
    max-width: 300px;
}

.input-row {
    width: 300px;
}

label.confirm-sale {
    font-size: 2em;
    font-weight: bold;
}

.table-btn  {
    margin-left: 10%;
}

.cancel-btn {
    margin-left: 15px;
}

.table-datapicker {
    margin-left: 35%;
    margin-right: 35%;
}


.row.flashes.alert.alert-welcome {
    text-transform: capitalize;
}

.settings-heading {
    margin-bottom: 20px;
}

.fa-check {
    color: green;
    font-weight: bold;
}

.fa-times {
    color: red;
    font-weight: bold;
}

.checkbox-imit {
    font-size: 2em;
}
button.list-item-btn {
    border: none;
    background-color: inherit;
}

button.list-item-btn:hover {
    cursor: pointer;
}

i.disabled {
    cursor: not-allowed;
}

.card-content.row {
    background-color: rgb(90, 90, 90);
    margin-bottom: 0;
    padding-bottom: 15px;
    min-height: 200px;
}

.card {
    background-color: rgb(46, 125, 50);
}

.dashboard-link {
    color: rgb(90, 90, 90);
}

.dashboard {
    text-align: center;
}

p.dashboard-numbers {
    font-size: 4em;
}

.seperation-line {
    height: 5px;
    background: linear-gradient(to right, rgb(46, 125, 50) 15%, rgb(90, 90, 90) 45%, rgb(90, 90, 90) 55%, rgb(46, 125, 50) 85%);
}

.add-car-btn {
    color: rgb(230, 230, 230);
}

button.btn {
    margin: 3px;
}

.row.inner-details {
    width: 80%;
    margin-top: 30px;
}

span.make-model-id-price {
    font-size: 4rem;
    font-weight: bold;
}

img.manager-picture {
    height: 180px;
    width: 240px;
}

.manager-picture {
    display: block;
    margin-left: auto;
    margin-right: auto;
    margin-bottom: 5px;
}

.detail-table {
    width: 60%;
    margin-left: auto;
    margin-right: auto;
}


.history {
    border-top: 5px solid rgb(46, 125, 50);
}

.settings-h5 {
    margin-top: 25px;
}

.close-btn {
    margin-bottom: 25px;
}

@media only screen and (max-width: 1350px) {
    .row.inner-details {
        width: 100%;
        margin-top: 25px;
    }
    main.container {
        width: 95%;
    }
}

@media only screen and (max-width: 1200px) {
    .home-page-list-image {
        margin-left: 15%;
    }
}

@media only screen and (max-width: 992px) {
    .brand-logo.not-mobile {
        display: none;
    }
    .brand-logo.mobile {
        display: inline-block;
    }
    table.list-table {
        font-size: 0.8em;
    }
    div.inner-details > h5 {
        font-size: 1.2rem;
    }
    span.make-model-id-price {
        font-size: 3rem;
    }
}

@media only screen and (max-width: 745px) {
    table.list-table {
        font-size: 0.6em;
    }
    main.container {
        width: 100%;
        margin-left: 0;
        margin-right: 0;
    }
}

@media only screen and (max-width: 515px) {
    table.list-table {
        font-size: 0.4em;
    }
    span.make-model-id-price {
        font-size: 2rem;
    }
}

/* Client side page settings (cars for sale/rent/contact)  */

.description > .car-for-x-make {
    font-size: 2.4em;;
}

.description > .car-for-x-model {
    font-size: 1.8em;;
}

.description > .car-for-x-price {
    font-size: 2em;
    font-weight: bold;
    margin: 20%;
}

.car-for-x-price:hover {
    font-size: 2.5em;
}

.random-car-listing {
    margin-top: 30px;
}

.car-item-seperator {
    height: 3px;
    background-color: rgb(66, 66, 66);
    background: linear-gradient(to right, rgb(230, 230, 230) 0%, rgb(66, 66, 66) 10%, rgb(230, 230, 230) 80%);
}

.dropdown-content li>a, .dropdown-content li>span {
    color: rgb(66, 66, 66);
}

#search-btn:hover {
    background-color: rgb(46, 125, 50);
    color: rgb(230, 230, 230);
}


a.car-for-x-price-tag {
    color: rgb(66, 66, 66);
}

.carousel .carousel-item {
    visibility: visible;
    max-width: 1300px;
    width: 100%;
    height: fit-content;
    position: relative;
}

#carouselExampleIndicators {
    height: fit-content;
}

button:focus {
    background-color: transparent;
}

.carousel-control-next-icon:after, .carousel-control-prev-icon:after {
    font-size: 3rem;
}

.carousel-control-next, .carousel-control-prev {
    width: 8%;
}

.invisible {
    height: 1px;
}

.not-available {
    position: absolute;
    color: red;
    width: 400px;
    margin-top: 10px;
    margin-left: 25px;
}

.not-available > h2 {
    transform: skewY(-12deg);
    font-size: 2.5rem;
    font-weight: bold;
}

@media only screen and (max-width: 745px) {
    .description > .car-for-x-make {
    font-size: 1.5em;;
    }

    .description > .car-for-x-model {
    font-size: 1.3em;;
    }

    .description > .car-for-x-price {
    font-size: 1.2em;
    font-weight: bold;
    }
}

